--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -5,6 +5,6 @@
   - name: i want to install apache2 webserver ( apt-get install apache2 )
     apt: 
       name: apache2
-      state: absent
+      state: present
 
 # sudo apt-get install apache2 
