--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -7,4 +7,8 @@
       name: apache2
       state: present
 
-# sudo apt-get install apache2 
+  - name: i want to start apache2 webserver ( service apache2 start)
+    service:
+       name: apache2
+       state: started
+
