--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -15,6 +15,23 @@
        state: started
     when: ansible_os_family=="Debian"
 
+
+  - name: i want to install httpd webserver (yum install httpd)
+    dnf:
+      name: httpd
+      state: present
+    when: ansible_os_family=="RedHat"
+
+
+  - name: i want to start httpd webserver ( service httpd start)
+    service:
+      name: httpd
+      state: started
+    when: ansible_os_family=="RedHat"
+
+# apt-get install apache2  for install webserver  Debian family 
+# yum install httpd      for install webserver on RedHat  family 
+
     
 
 
