--- a/mydebug.yml
+++ b/mydebug.yml
@@ -4,4 +4,8 @@
   tasks: 
   - name: i want to execute direct linux command 
     command: hostname -f
-    
+    register: myresult
+
+  - name: i want to display ny first result 
+    debug:
+       msg: "{{myresult}}"
