--- a/mydebug.yml
+++ b/mydebug.yml
@@ -9,3 +9,17 @@
   - name: i want to display ny first result 
     debug:
        msg: "{{myresult}}"
+
+  - name: install git 
+    apt:
+      name: git
+      state: present 
+    when: myresult.stderr!=""
+
+  - name: install tree
+    apt:
+      name: git 
+      state: present
+    when: myresult.stderr==""
+
+
