--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -13,6 +13,17 @@
        path: /home/maha/myfolder
        state: directory
 
-       
+  - name: copy a file into node side
+    copy:
+      src: mytextfile
+      dest: /home/maha/myfolder/mytextfile
+
+  - name: download any internet file 
+    get_url:
+      url: https://updates.jenkins.io/download/war/2.507/jenkins.war
+      dest: /home/maha/myfolder/jenkins.war
+      force_basic_auth: yes
+
+
 
    
