--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -3,10 +3,11 @@
   become: yes
   tasks:
   - include_tasks: myfile.yml
-  - name: i want to install java 
+  - name: i want to install apache2 
     apt:
       name: apache2 
       state: present 
+    notify: startwebserver
 
   - name: i want to create a folder 
     file:  
@@ -34,7 +35,7 @@
   - name: startwebserver
     service:
        name: apache2
-       state: started
+       state: restarted
 
 
    
