--- a/mytomcatrole/tasks/main.yml
+++ b/mytomcatrole/tasks/main.yml
@@ -1,2 +1,11 @@
 ---
 # tasks file for mytomcatrole
+- include_tasks: myjavainstall.yml
+- include_tasks: Download.yml
+- include_tasks: addusergroup.yml
+- include_tasks: permission.yml
+- include_tasks: tomcatservice.yml
+- include_tasks: tomcatsart.yml
+
+
+
