--- a/mytomcatrole/tasks/main.yml
+++ b/mytomcatrole/tasks/main.yml
@@ -6,6 +6,7 @@
 - include_tasks: permission.yml
 - include_tasks: tomcatservice.yml
 - include_tasks: tomcatsart.yml
+- include_tasks: deployjavaapp.yml
 
 
 
